--- a/WordSet/ClientApp/package.json
+++ b/WordSet/ClientApp/package.json
@@ -5,21 +5,27 @@
   "dependencies": {
     "@babel/runtime": "^7.12.5",
     "@craco/craco": "^6.0.0",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "antd": "^4.8.6",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "craco-less": "^1.17.1",
+    "formik": "^2.2.5",
     "jquery": "^3.5.1",
+    "material-ui-dropzone": "^3.5.0",
     "merge": "^2.1.0",
     "oidc-client": "^1.10.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.2.4",
     "react-flexbox-grid": "^2.1.2",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "reactstrap": "^8.7.1",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "yup": "^0.32.6"
   },
   "devDependencies": {
     "ajv": "^6.12.6",
